--- a/Mockups/HomePage/HomePage.html
+++ b/Mockups/HomePage/HomePage.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Página Inicial!</title>
-    <link class="logo" rel="stylesheet" href="HomePage.css">
+    <link rel="stylesheet" href="HomePage.css">
   </head>
   <body>
     <div class="container">
       <div class="header">
-        <img class="logo" src="logo-placeholder-300x210.jpg" alt="Logo placeholder">
+        <img class="logo" src="../Assets/logo-placeholder-300x210.jpg" alt="Logo placeholder">
         <div class="search-bar-container">
           <label for="search-bar">Pesquisa</label>
           <input type="text" id="searchBar" name="searchBar" placeholder="Algum item interessante"/>
-          <button type="submit" name="button"><img class="lupa" src="lupa.png" alt="Lupa"></button>
+          <button type="submit" name="button"><img class="lupa" src="../Assets/lupa.png" alt="Lupa"></button>
         </div>
         <div class="login">
           <button type="button" name="button">Entrar/Cadastrar</button>
@@ -33,7 +33,7 @@
         <div class="placeholder-item"></div>
       </div>
       <div class="footer">
-        <img class="logo" src="logo-placeholder-300x210.jpg" alt="Logo placeholder">
+        <img class="../Assets/logo" src="logo-placeholder-300x210.jpg" alt="Logo placeholder">
         <button type="button" name="informacoes">Mais informações</button>
         <button type="button" name="sobre-nos">Sobre nós</button>
         <p>Redes sociais</p>
