--- a/Mockups/LoginPage/LoginPage.html
+++ b/Mockups/LoginPage/LoginPage.html
@@ -12,9 +12,13 @@
         <button type="button" name="go back">Voltar à página inicial</button>
       </div>
       <div class="content">
-        <div class="forms">
+        <div class="login-form">
           <label for="login">Login:</label>
-          <input type="text" name="login" placeholder="Usuário">
+          <input type="text" id="login" name="login" placeholder="Usuário ou e-mail"/>
+          <label for="password">Senha:</label>
+          <input type="password" id="password" name="password" placeholder="Senha"/>
+          <button type="button" name="fazer login">Entrar</button>
+          <a href="#">Não possui uma conta?</a>
         </div>
       </div>
     </div>
