--- a/Mockups/LoginPage.html
+++ b/Mockups/LoginPage.html
@@ -12,8 +12,8 @@
       </div>
       <div class="content">
         <div class="login-form">
-          <label for="login">Login:</label>
-          <input type="text" id="login" name="login" placeholder="Usuário ou e-mail"/>
+          <label for="login">E-mail:</label>
+          <input type="text" id="login" name="login" placeholder="E-mail"/>
           <label for="password">Senha:</label>
           <input type="password" id="password" name="password" placeholder="Senha"/>
           <button type="button" name="fazer login">Entrar</button>
