--- a/Mockups/CreateAccount.html
+++ b/Mockups/CreateAccount.html
@@ -12,12 +12,16 @@
       </div>
       <div class="content">
         <div class="login-form">
-          <label for="login">Login:</label>
-          <input type="text" id="login" name="login" placeholder="Usuário"/>
           <label for="email">E-mail:</label>
           <input type="email" id="email" name="email" placeholder="E-mail"/>
           <label for="password">Senha:</label>
           <input type="password" id="password" name="password" placeholder="Senha"/>
+          <label for="name">Nome:</label>
+          <input type="text" id="name" name="name" placeholder="Nome"/>
+          <label for="phone">Telefone:</label>
+          <input type="tel" id="phone" name="phone" placeholder="Telefone"/>
+          <label for="address">Endereço:</label>
+          <input type="text" id="address" name="address" placeholder="Endereço"/>
           <button type="button" name="criar conta">Criar conta</button>
           <a href="LoginPage.html">Já possui uma conta?</a>
         </div>
