added placeholder items

--- a/Mockups/Cart.html
+++ b/Mockups/Cart.html
@@ -25,13 +25,13 @@
             <li><strong>Preço</strong></li>
           </ul>
           <ul>
-            <li><div class="placeholder-item"></div></li>
-            <li>Teste</li>
+            <li><img src="Assets/tv.png" alt="tv"></li>
+            <li>Smart TV Android LED 32</li>
             <li>
               <label for="quantidade">Quantidade</label>
               <input type="number" name="quantidade" id="quantidade" value="1">
             </li>
-            <li>R$10,00</li>
+            <li>R$1900,00</li>
           </ul>
         </div>
         <button type="button" name="finalizar" class="finalizar-button">Finalizar a compra</button>
