--- a/Mockups/HomePage.html
+++ b/Mockups/HomePage.html
@@ -21,22 +21,95 @@
       </div>
       <div class="content">
         <div class="placeholder-item">
+          <img src="Assets/tv.png" alt="tv">
+          <p>Smart TV Android LED 32"</p>
+          <p>R$1900,00</p>
           <button type="button" name="button" class="cart-button">Adicionar ao carrinho</button>
         </div>
-        <div class="placeholder-item"></div>
-        <div class="placeholder-item"></div>
-        <div class="placeholder-item"></div>
-        <div class="placeholder-item"></div>
-        <div class="placeholder-item"></div>
-        <div class="placeholder-item"></div>
-        <div class="placeholder-item"></div>
-        <div class="placeholder-item"></div>
-        <div class="placeholder-item"></div>
-        <div class="placeholder-item"></div>
-        <div class="placeholder-item"></div>
-        <div class="placeholder-item"></div>
-        <div class="placeholder-item"></div>
-        <div class="placeholder-item"></div>
+        <div class="placeholder-item">
+          <img src="Assets/samsungA01.png" alt="Sansung A01">
+          <p>Smartphone Samsung Galaxy A01 - Azul</p>
+          <p>R$998,90</p>
+          <button type="button" name="button" class="cart-button">Adicionar ao carrinho</button>
+        </div>
+        <div class="placeholder-item">
+          <img src="Assets/samsungA.png" alt="Sansung A">
+          <p>Tablet Samsung Galaxy A 32GB Tela 8"</p>
+          <p>R$849,90</p>
+          <button type="button" name="button" class="cart-button">Adicionar ao carrinho</button>
+        </div>
+        <div class="placeholder-item">
+          <img src="Assets/tv_philco.png" alt="TV Philco">
+          <p>Smart TV LED 32" Philco</p>
+          <p>R1149,90</p>
+          <button type="button" name="button" class="cart-button">Adicionar ao carrinho</button>
+        </div>
+        <div class="placeholder-item">
+          <img src="Assets/note_lenovo.png" alt="Notebook Lenovo">
+          <p>Notebook Lenovo Ideapad</p>
+          <p>R3149,00</p>
+          <button type="button" name="button" class="cart-button">Adicionar ao carrinho</button>
+        </div>
+        <div class="placeholder-item">
+          <img src="Assets/note_dell.png" alt="Notebook Dell">
+          <p>Notebook Dell Inspiron</p>
+          <p>R3000,00</p>
+          <button type="button" name="button" class="cart-button">Adicionar ao carrinho</button>
+        </div>
+        <div class="placeholder-item">
+          <img src="Assets/note_acer.png" alt="Notebook Acer">
+          <p>Notebook Acer Aspire</p>
+          <p>R4500,00</p>
+          <button type="button" name="button" class="cart-button">Adicionar ao carrinho</button>
+        </div>
+        <div class="placeholder-item">
+          <img src="Assets/ar_split_lg.png" alt="Ar condicionado LG">
+          <p>Ar condicionado split LG</p>
+          <p>R2200,00</p>
+          <button type="button" name="button" class="cart-button">Adicionar ao carrinho</button>
+        </div>
+        <div class="placeholder-item">
+          <img src="Assets/ar_split_consul.png" alt="Ar condicionado consul">
+          <p>Ar condicionado split Consul</p>
+          <p>R2000,00</p>
+          <button type="button" name="button" class="cart-button">Adicionar ao carrinho</button>
+        </div>
+        <div class="placeholder-item">
+          <img src="Assets/ar_split_philco.png" alt="Ar condicionado philco">
+          <p>Ar condicionado split Philco</p>
+          <p>R1900,00</p>
+          <button type="button" name="button" class="cart-button">Adicionar ao carrinho</button>
+        </div>
+        <div class="placeholder-item">
+          <img src="Assets/microondas_consul.png" alt="micro-ondas consul">
+          <p>Micro-Ondas Consul</p>
+          <p>R$469,90</p>
+          <button type="button" name="button" class="cart-button">Adicionar ao carrinho</button>
+        </div>
+        <div class="placeholder-item">
+          <img src="Assets/microondas_brastemp.png" alt="micro-ondas brastemp">
+          <p>Micro-Ondas Brastemp</p>
+          <p>R$649,90</p>
+          <button type="button" name="button" class="cart-button">Adicionar ao carrinho</button>
+        </div>
+        <div class="placeholder-item">
+          <img src="Assets/lavadora_brastemp.png" alt="lavadora brastemp">
+          <p>Lavadora de Roupas Brastemp</p>
+          <p>R$1549,90</p>
+          <button type="button" name="button" class="cart-button">Adicionar ao carrinho</button>
+        </div>
+        <div class="placeholder-item">
+          <img src="Assets/lavadora.png" alt="lavadora consul">
+          <p>Lavadora de Roupas Consul</p>
+          <p>R$1349,90</p>
+          <button type="button" name="button" class="cart-button">Adicionar ao carrinho</button>
+        </div>
+        <div class="placeholder-item">
+          <img src="Assets/lavadora_electro.png" alt="lavadora electrolux">
+          <p>Lavadora de Roupas Electrolux</p>
+          <p>R$1649,90</p>
+          <button type="button" name="button" class="cart-button">Adicionar ao carrinho</button>
+        </div>
       </div>
       <div class="footer">
         <img class="logo" src="./Assets/logo-placeholder-300x210.jpg" alt="Logo placeholder">
