--- a/Mockups/Cart.html
+++ b/Mockups/Cart.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <div class="header">
-        <a href="HomePage.html"><img class="logo" src="./Assets/logo-placeholder-300x210.jpg" alt="Logo placeholder"></a>
+        <a href="HomePage.html"><img class="logo" src="./Assets/logo.png" alt="Logo placeholder"></a>
         <div class="search-bar-container">
           <label for="search-bar">Pesquisa</label>
           <input type="text" id="search-bar" name="search-bar" placeholder="Algum item interessante"/>
