--- a/Mockups/HomePage.html
+++ b/Mockups/HomePage.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <div class="header">
-        <img class="logo" src="./Assets/logo-placeholder-300x210.jpg" alt="Logo placeholder">
+        <img class="logo" src="./Assets/logo.png" alt="Logo placeholder">
         <div class="search-bar-container">
           <label for="search-bar">Pesquisa</label>
           <input type="text" id="searchBar" name="searchBar" placeholder="Algum item interessante"/>
@@ -112,7 +112,7 @@
         </div>
       </div>
       <div class="footer">
-        <img class="logo" src="./Assets/logo-placeholder-300x210.jpg" alt="Logo placeholder">
+        <img class="logo" src="./Assets/logo.png" alt="Logo placeholder">
         <a href="#" class="change-page">Mais informações</a>
         <a href="#" class="change-page">Sobre nós</a>
         <a href="#" class="change-page">Redes sociais</a>
