--- a/Mockups/LoginPage.html
+++ b/Mockups/LoginPage.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <div class="header">
-        <a href="HomePage.html" class="login-logo"><img class="logo" src="./Assets/logo-placeholder-300x210.jpg" alt="logo placeholder"></a>
+        <a href="HomePage.html" class="login-logo"><img class="logo" src="./Assets/logo.png" alt="logo placeholder"></a>
       </div>
       <div class="content">
         <div class="login-form">
